STGrammer/STParser.cpp

// Generated from ST.g4 by ANTLR 4.9.3


#include "STListener.h"
#include "STVisitor.h"

#include "STParser.h"


using namespace antlrcpp;
using namespace antlr4;

STParser::STParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

STParser::~STParser() {
  delete _interpreter;
}

std::string STParser::getGrammarFileName() const {
  return "ST.g4";
}

const std::vector<std::string>& STParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& STParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartpointContext ------------------------------------------------------------------

STParser::StartpointContext::StartpointContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STParser::StartpointContext::EOF() {
  return getToken(STParser::EOF, 0);
}

std::vector<STParser::Program_listContext *> STParser::StartpointContext::program_list() {
  return getRuleContexts<STParser::Program_listContext>();
}

STParser::Program_listContext* STParser::StartpointContext::program_list(size_t i) {
  return getRuleContext<STParser::Program_listContext>(i);
}


size_t STParser::StartpointContext::getRuleIndex() const {
  return STParser::RuleStartpoint;
}

void STParser::StartpointContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStartpoint(this);
}

void STParser::StartpointContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStartpoint(this);
}


antlrcpp::Any STParser::StartpointContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStartpoint(this);
  else
    return visitor->visitChildren(this);
}

STParser::StartpointContext* STParser::startpoint() {
  StartpointContext *_localctx = _tracker.createInstance<StartpointContext>(_ctx, getState());
  enterRule(_localctx, 0, STParser::RuleStartpoint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == STParser::T__0 || _la == STParser::T__76

    || _la == STParser::T__78) {
      setState(68);
      program_list();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(STParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Program_listContext ------------------------------------------------------------------

STParser::Program_listContext::Program_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::ProgramDeclContext* STParser::Program_listContext::programDecl() {
  return getRuleContext<STParser::ProgramDeclContext>(0);
}

STParser::FunctionDeclContext* STParser::Program_listContext::functionDecl() {
  return getRuleContext<STParser::FunctionDeclContext>(0);
}

STParser::FunctionBlockDeclContext* STParser::Program_listContext::functionBlockDecl() {
  return getRuleContext<STParser::FunctionBlockDeclContext>(0);
}


size_t STParser::Program_listContext::getRuleIndex() const {
  return STParser::RuleProgram_list;
}

void STParser::Program_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram_list(this);
}

void STParser::Program_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram_list(this);
}


antlrcpp::Any STParser::Program_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitProgram_list(this);
  else
    return visitor->visitChildren(this);
}

STParser::Program_listContext* STParser::program_list() {
  Program_listContext *_localctx = _tracker.createInstance<Program_listContext>(_ctx, getState());
  enterRule(_localctx, 2, STParser::RuleProgram_list);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(76);
        programDecl();
        break;
      }

      case STParser::T__76: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        functionDecl();
        break;
      }

      case STParser::T__78: {
        enterOuterAlt(_localctx, 3);
        setState(78);
        functionBlockDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramDeclContext ------------------------------------------------------------------

STParser::ProgramDeclContext::ProgramDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STParser::ProgramDeclContext::IDENT() {
  return getToken(STParser::IDENT, 0);
}

STParser::DeclarationStmtContext* STParser::ProgramDeclContext::declarationStmt() {
  return getRuleContext<STParser::DeclarationStmtContext>(0);
}

std::vector<STParser::Statement_listContext *> STParser::ProgramDeclContext::statement_list() {
  return getRuleContexts<STParser::Statement_listContext>();
}

STParser::Statement_listContext* STParser::ProgramDeclContext::statement_list(size_t i) {
  return getRuleContext<STParser::Statement_listContext>(i);
}


size_t STParser::ProgramDeclContext::getRuleIndex() const {
  return STParser::RuleProgramDecl;
}

void STParser::ProgramDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgramDecl(this);
}

void STParser::ProgramDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgramDecl(this);
}


antlrcpp::Any STParser::ProgramDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitProgramDecl(this);
  else
    return visitor->visitChildren(this);
}

STParser::ProgramDeclContext* STParser::programDecl() {
  ProgramDeclContext *_localctx = _tracker.createInstance<ProgramDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, STParser::RuleProgramDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(STParser::T__0);
    setState(82);
    match(STParser::IDENT);
    setState(84);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(83);
      declarationStmt();
      break;
    }

    default:
      break;
    }
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STParser::T__2)
      | (1ULL << STParser::T__3)
      | (1ULL << STParser::T__4)
      | (1ULL << STParser::T__5)
      | (1ULL << STParser::T__6)
      | (1ULL << STParser::T__7)
      | (1ULL << STParser::T__10)
      | (1ULL << STParser::T__11)
      | (1ULL << STParser::T__12)
      | (1ULL << STParser::T__13)
      | (1ULL << STParser::T__32)
      | (1ULL << STParser::T__36)
      | (1ULL << STParser::T__41)
      | (1ULL << STParser::T__46)
      | (1ULL << STParser::T__48))) != 0) || _la == STParser::IDENT) {
      setState(86);
      statement_list();
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    match(STParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_listContext ------------------------------------------------------------------

STParser::Statement_listContext::Statement_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::AssignStmtContext* STParser::Statement_listContext::assignStmt() {
  return getRuleContext<STParser::AssignStmtContext>(0);
}

STParser::SelectStmtContext* STParser::Statement_listContext::selectStmt() {
  return getRuleContext<STParser::SelectStmtContext>(0);
}

STParser::IterationStmtContext* STParser::Statement_listContext::iterationStmt() {
  return getRuleContext<STParser::IterationStmtContext>(0);
}

STParser::CallFuncStmtContext* STParser::Statement_listContext::callFuncStmt() {
  return getRuleContext<STParser::CallFuncStmtContext>(0);
}

STParser::JumpStmtContext* STParser::Statement_listContext::jumpStmt() {
  return getRuleContext<STParser::JumpStmtContext>(0);
}


size_t STParser::Statement_listContext::getRuleIndex() const {
  return STParser::RuleStatement_list;
}

void STParser::Statement_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_list(this);
}

void STParser::Statement_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_list(this);
}


antlrcpp::Any STParser::Statement_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitStatement_list(this);
  else
    return visitor->visitChildren(this);
}

STParser::Statement_listContext* STParser::statement_list() {
  Statement_listContext *_localctx = _tracker.createInstance<Statement_listContext>(_ctx, getState());
  enterRule(_localctx, 6, STParser::RuleStatement_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(114);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(95);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == STParser::IDENT) {
        setState(94);
        assignStmt();
      }
      setState(97);
      match(STParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(99);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == STParser::T__32

      || _la == STParser::T__36) {
        setState(98);
        selectStmt();
      }
      setState(101);
      match(STParser::T__2);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(103);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << STParser::T__41)
        | (1ULL << STParser::T__46)
        | (1ULL << STParser::T__48))) != 0)) {
        setState(102);
        iterationStmt();
      }
      setState(105);
      match(STParser::T__2);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(107);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << STParser::T__3)
        | (1ULL << STParser::T__4)
        | (1ULL << STParser::T__5)
        | (1ULL << STParser::T__6)
        | (1ULL << STParser::T__7))) != 0) || _la == STParser::IDENT) {
        setState(106);
        callFuncStmt();
      }
      setState(109);
      match(STParser::T__2);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(111);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << STParser::T__10)
        | (1ULL << STParser::T__11)
        | (1ULL << STParser::T__12)
        | (1ULL << STParser::T__13))) != 0)) {
        setState(110);
        jumpStmt();
      }
      setState(113);
      match(STParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectStmtContext ------------------------------------------------------------------

STParser::SelectStmtContext::SelectStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::IfStmtContext* STParser::SelectStmtContext::ifStmt() {
  return getRuleContext<STParser::IfStmtContext>(0);
}

STParser::CaseStmtContext* STParser::SelectStmtContext::caseStmt() {
  return getRuleContext<STParser::CaseStmtContext>(0);
}


size_t STParser::SelectStmtContext::getRuleIndex() const {
  return STParser::RuleSelectStmt;
}

void STParser::SelectStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectStmt(this);
}

void STParser::SelectStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectStmt(this);
}


antlrcpp::Any STParser::SelectStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitSelectStmt(this);
  else
    return visitor->visitChildren(this);
}

STParser::SelectStmtContext* STParser::selectStmt() {
  SelectStmtContext *_localctx = _tracker.createInstance<SelectStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, STParser::RuleSelectStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STParser::T__32: {
        enterOuterAlt(_localctx, 1);
        setState(116);
        ifStmt();
        break;
      }

      case STParser::T__36: {
        enterOuterAlt(_localctx, 2);
        setState(117);
        caseStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IterationStmtContext ------------------------------------------------------------------

STParser::IterationStmtContext::IterationStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::WhileStmtContext* STParser::IterationStmtContext::whileStmt() {
  return getRuleContext<STParser::WhileStmtContext>(0);
}

STParser::ForStmtContext* STParser::IterationStmtContext::forStmt() {
  return getRuleContext<STParser::ForStmtContext>(0);
}

STParser::RepeatStmtContext* STParser::IterationStmtContext::repeatStmt() {
  return getRuleContext<STParser::RepeatStmtContext>(0);
}


size_t STParser::IterationStmtContext::getRuleIndex() const {
  return STParser::RuleIterationStmt;
}

void STParser::IterationStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIterationStmt(this);
}

void STParser::IterationStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIterationStmt(this);
}


antlrcpp::Any STParser::IterationStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitIterationStmt(this);
  else
    return visitor->visitChildren(this);
}

STParser::IterationStmtContext* STParser::iterationStmt() {
  IterationStmtContext *_localctx = _tracker.createInstance<IterationStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, STParser::RuleIterationStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STParser::T__46: {
        enterOuterAlt(_localctx, 1);
        setState(120);
        whileStmt();
        break;
      }

      case STParser::T__41: {
        enterOuterAlt(_localctx, 2);
        setState(121);
        forStmt();
        break;
      }

      case STParser::T__48: {
        enterOuterAlt(_localctx, 3);
        setState(122);
        repeatStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallFuncStmtContext ------------------------------------------------------------------

STParser::CallFuncStmtContext::CallFuncStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STParser::CallFuncStmtContext::IDENT() {
  return getToken(STParser::IDENT, 0);
}

STParser::FuncParamsContext* STParser::CallFuncStmtContext::funcParams() {
  return getRuleContext<STParser::FuncParamsContext>(0);
}


size_t STParser::CallFuncStmtContext::getRuleIndex() const {
  return STParser::RuleCallFuncStmt;
}

void STParser::CallFuncStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCallFuncStmt(this);
}

void STParser::CallFuncStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCallFuncStmt(this);
}


antlrcpp::Any STParser::CallFuncStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitCallFuncStmt(this);
  else
    return visitor->visitChildren(this);
}

STParser::CallFuncStmtContext* STParser::callFuncStmt() {
  CallFuncStmtContext *_localctx = _tracker.createInstance<CallFuncStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, STParser::RuleCallFuncStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STParser::T__3)
      | (1ULL << STParser::T__4)
      | (1ULL << STParser::T__5)
      | (1ULL << STParser::T__6)
      | (1ULL << STParser::T__7))) != 0) || _la == STParser::IDENT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(126);
    match(STParser::T__8);
    setState(128);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STParser::T__7)
      | (1ULL << STParser::T__8)
      | (1ULL << STParser::T__26)
      | (1ULL << STParser::T__31))) != 0) || _la == STParser::NUMBER

    || _la == STParser::IDENT) {
      setState(127);
      funcParams();
    }
    setState(130);
    match(STParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JumpStmtContext ------------------------------------------------------------------

STParser::JumpStmtContext::JumpStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t STParser::JumpStmtContext::getRuleIndex() const {
  return STParser::RuleJumpStmt;
}

void STParser::JumpStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJumpStmt(this);
}

void STParser::JumpStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJumpStmt(this);
}


antlrcpp::Any STParser::JumpStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitJumpStmt(this);
  else
    return visitor->visitChildren(this);
}

STParser::JumpStmtContext* STParser::jumpStmt() {
  JumpStmtContext *_localctx = _tracker.createInstance<JumpStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, STParser::RuleJumpStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STParser::T__10)
      | (1ULL << STParser::T__11)
      | (1ULL << STParser::T__12)
      | (1ULL << STParser::T__13))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignStmtContext ------------------------------------------------------------------

STParser::AssignStmtContext::AssignStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::PrefixExprContext* STParser::AssignStmtContext::prefixExpr() {
  return getRuleContext<STParser::PrefixExprContext>(0);
}

STParser::ExprContext* STParser::AssignStmtContext::expr() {
  return getRuleContext<STParser::ExprContext>(0);
}

STParser::CallFuncStmtContext* STParser::AssignStmtContext::callFuncStmt() {
  return getRuleContext<STParser::CallFuncStmtContext>(0);
}


size_t STParser::AssignStmtContext::getRuleIndex() const {
  return STParser::RuleAssignStmt;
}

void STParser::AssignStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignStmt(this);
}

void STParser::AssignStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignStmt(this);
}


antlrcpp::Any STParser::AssignStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitAssignStmt(this);
  else
    return visitor->visitChildren(this);
}

STParser::AssignStmtContext* STParser::assignStmt() {
  AssignStmtContext *_localctx = _tracker.createInstance<AssignStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, STParser::RuleAssignStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    prefixExpr();
    setState(135);
    match(STParser::T__14);
    setState(138);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      setState(136);
      expr();
      break;
    }

    case 2: {
      setState(137);
      callFuncStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrefixExprContext ------------------------------------------------------------------

STParser::PrefixExprContext::PrefixExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::IdentContext* STParser::PrefixExprContext::ident() {
  return getRuleContext<STParser::IdentContext>(0);
}


size_t STParser::PrefixExprContext::getRuleIndex() const {
  return STParser::RulePrefixExpr;
}

void STParser::PrefixExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrefixExpr(this);
}

void STParser::PrefixExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrefixExpr(this);
}


antlrcpp::Any STParser::PrefixExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitPrefixExpr(this);
  else
    return visitor->visitChildren(this);
}

STParser::PrefixExprContext* STParser::prefixExpr() {
  PrefixExprContext *_localctx = _tracker.createInstance<PrefixExprContext>(_ctx, getState());
  enterRule(_localctx, 18, STParser::RulePrefixExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    ident(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

STParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::OrExprContext* STParser::ExprContext::orExpr() {
  return getRuleContext<STParser::OrExprContext>(0);
}


size_t STParser::ExprContext::getRuleIndex() const {
  return STParser::RuleExpr;
}

void STParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void STParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


antlrcpp::Any STParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

STParser::ExprContext* STParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 20, STParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    orExpr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OrExprContext ------------------------------------------------------------------

STParser::OrExprContext::OrExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STParser::AndExprContext* STParser::OrExprContext::andExpr() {
  return getRuleContext<STParser::AndExprContext>(0);
}

STParser::OrExprContext* STParser::OrExprContext::orExpr() {
  return getRuleContext<STParser::OrExprContext>(0);
}


size_t STParser::OrExprContext::getRuleIndex() const {
  return STParser::RuleOrExpr;
}
